--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,5 +9,6 @@ COPY html /var/www/html
 RUN chmod -R 777 /var/www/html/engine/
 RUN chmod -R 777 /var/www/html/engine/cache/
 RUN chmod -R 777 /var/www/html/engine/function/
+RUN chmod -R 777 /var/www/html/engine/function/cache.php
 
 VOLUME [ "/srv" ]
